apps/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  type: NodePort
  selector:
    app: website
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
